# traceloupe

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTEXT.md  Cargo.toml  NOTICE  README.md  RELEASING.md  THIRD-PARTY-NOTICES  THIRD-PARTY-NOTICES.md  architecture.md  index.html  package.json  pnpm-lock.yaml  product-architecture-description.md  tsconfig.json
.agents/skills/create-cache-db-app-parser/: SKILL.md
.agents/skills/create-native-app-parser/: SKILL.md
.cargo/: config.toml
.github/workflows/: ci.yml  release-tag.yml
crates/salvage-core/: Cargo.toml
crates/salvage-core/src/: cache.rs  crypto.rs  discovery.rs  error.rs  import.rs  install.rs  lib.rs  normalize.rs  query.rs  sidecar.rs
crates/salvage-core/src/parsers/: address_book.rs  camera_roll.rs  chats.rs  mod.rs
crates/salvage-core/tests/: xcheck_python_fixture.rs  xcheck_tiktok.rs
crates/traceloupe-core/: Cargo.toml
crates/traceloupe-core/examples/: dump_app_files.rs  dump_backup.rs
crates/traceloupe-core/fixtures/safety-scan/: cases.json
crates/traceloupe-core/resources/indicators/: ATTRIBUTION.md  manifest.json
crates/traceloupe-core/src/: analysis.rs  analyzer.rs  cache.rs  crypto.rs  detection_settings.rs  discovery.rs  engine.rs  error.rs  import.rs  indicators.rs  install.rs  lib.rs  manifest.rs  normalize.rs  nska.rs  query.rs  rich_link.rs  shorteners.rs  sidecar.rs
crates/traceloupe-core/src/parsers/: address_book.rs  calendar.rs  calls.rs  camera_roll.rs  coreduet.rs  health.rs  messages.rs  mod.rs  notes.rs  photos_meta.rs  recordings.rs  reminders.rs  safari.rs  safari_bookmarks.rs  tiktok_contacts.rs
crates/traceloupe-core/src/parsers/apps/: facebook_messenger.rs  imo.rs  instagram.rs  kik.rs  linkedin.rs  mod.rs  teams.rs  telegram.rs  threema.rs  tiktok.rs  viber.rs  whatsapp.rs
crates/traceloupe-core/src/safety_scan/: chunker.rs  client.rs  engine.rs  eval.rs  mod.rs  models.rs  prompt.rs  server.rs  summary.rs
crates/traceloupe-core/tests/: indicator_fetch.rs  indicators_feeds.rs  scan_real_cache.rs  xcheck_python_fixture.rs  xcheck_tiktok.rs
docs/: CONTEXT.md  app-data-coverage.md  app-support.md  architecture.md  icloud-live-fetch-porting-spec.md  icloud-offload-flags-findings.md  icloud-offloaded-media-prd.md  native-app-parser.md  product-overview.md  safety-scan-plan.md  safety-scan-sidecar.md  safety-scan-validation.md  security-check-m1-plan.md  security-check-validation.md  spike-ileapp.md  spyware-analyzer-prd.md  ui.md
docs/adr/: 0001-icloud-offloaded-media-two-tier.md  0001-privacy-promise-scope.md  0002-safety-scan-local-pipeline.md  0003-icloud-offloaded-media-two-tier.md
docs/design/: scan-views-mockups.html  ux-refresh-mockups.html
docs/plans/: safety-scan-plan.md  security-check-m1-plan.md  spyware-analyzer-prd.md
docs/reference/: app-data-coverage.md  app-support.md  native-app-parser.md  signing.md  ui.md
docs/research/: icloud-offloaded-media-research.md  spike-ileapp.md
scripts/: agent-worktree.sh  build-engine.sh  build-llama-server.sh  check-doc-links.sh  check-releases.sh  dev.sh  download-llama-server.sh  dump-backup.sh  native-shot.sh  release.sh  setup-engine.sh  shot.mjs  update-indicator-snapshot.sh
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.dev.json  tauri.conf.json
src-tauri/binaries/: .gitignore  LLAMA_CPP_VERSION
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: biometric.rs  lib.rs  logging.rs  main.rs  media.rs  safety_scan_cmd.rs  secret.rs  signing.rs  theme.rs
src/components/: adaptive-toolbar.tsx  app-shell.tsx  badge-filter.tsx  device-hero.tsx  filter-control.tsx  filter-groups.tsx  filter-pill.ts  import-provider.tsx  lazy-virtual-list.tsx  media-lightbox.tsx  mode-toggle.tsx  overflow-row.tsx  reimport-button.tsx  reimport-provider.tsx  resize.tsx  safety-flag-badge.tsx  safety-model-settings.tsx  safety-scan-provider.tsx  security-settings.tsx  settings-dialog-context.tsx  settings-provider.tsx  sort-control.tsx  theme-provider.tsx  time-filter.tsx  toolbar-context.tsx  toolbar-group.tsx  toolbar-islands.tsx  view.tsx  virtual-list.tsx
src/components/ui/: collapsible.tsx  hover-card.tsx  item.tsx  popover.tsx  sidebar.tsx  sonner.tsx
src/lib/: apps.ts  brand-icon.tsx  contact.ts  device-names.ts  feeds.ts  format.ts  ipc.ts  use-contact-resolver.ts  use-debounced.ts  use-media-cache-key.ts  use-media-cache-key.tsx  use-persisted-state.ts  use-system-accent.ts
src/views/: apps.tsx  backup-picker.tsx  calendar.tsx  calls.tsx  contacts.tsx  device.tsx  engine-setup.tsx  gallery.tsx  health.tsx  import-dialog.tsx  interactions.tsx  messages.tsx  notes.tsx  photos.tsx  placeholder.tsx  recordings.tsx  reminders.tsx  safari.tsx  safety-scan.tsx  security-consent.tsx  security.tsx
tools/: README.md  make_fixture_backup.py
