[workspace]
resolver = "2"
members = ["crates/salvage-core", "src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
rusqlite = { version = "0.37", features = ["bundled"] }
plist = "1"
time = { version = "0.3", features = ["serde", "formatting", "parsing"] }
# Engine download-on-first-use: HTTP fetch + checksum verification.
ureq = "2"
sha2 = "0.10"
hex = "0.4"
# Native decryption of encrypted iOS backups (Phase 2): keybag unwrap → class
# keys → Manifest.db / per-file AES-CBC. See crates/salvage-core/src/crypto.rs.
sha1 = "0.10"
pbkdf2 = "0.12"
aes = "0.8"
cbc = "0.1"
aes-kw = "0.2"
