[package]
name = "salvage"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local iOS Backup Browser"
authors = ["Peter Blenessy"]

[lib]
name = "salvage_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
salvage-core = { path = "../crates/salvage-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = "2.7.1"
# Persist encrypted-backup passwords in the macOS Keychain (secure store), so
# an encrypted backup can be reopened and its media decrypted without re-prompting.
keyring = { version = "3", features = ["apple-native"] }

[dev-dependencies]
tempfile = "3"
