[package]
name = "traceloupe"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Local iOS Backup Browser"
authors = ["Peter Blenessy"]

[lib]
name = "traceloupe_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
traceloupe-core = { path = "../crates/traceloupe-core" }
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { workspace = true }
serde_json = { workspace = true }
tauri-plugin-dialog = "2.7.1"
# Persist encrypted-backup passwords in the macOS Keychain (secure store), so
# an encrypted backup can be reopened and its media decrypted without re-prompting.
keyring = { version = "3", features = ["apple-native"] }
# Optional Touch ID gate for releasing backup keys (biometric.rs). Wraps
# LocalAuthentication (LAContext) so we don't hand-roll the FFI.
robius-authentication = "0.1"
# Zero the backup password in memory once it's been used (defence-in-depth for
# a tool whose whole job is handling secrets).
zeroize = { workspace = true }
# Opt-in link previews (fetch a URL's OpenGraph metadata). Off by default; only
# ever runs when the user turns the setting on. Same HTTP client the engine
# download uses. base64 lets us proxy the preview image server-side (as a data:
# URL) so the webview never contacts the image host directly.
ureq = { workspace = true }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"
