[package]
name = "traceloupe-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "UI-agnostic core for the local iOS backup browser: discovery, cache, import pipeline"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
rusqlite = { workspace = true }
plist = { workspace = true }
time = { workspace = true }
ureq = { workspace = true }
sha2 = { workspace = true }
hex = { workspace = true }
sha1 = { workspace = true }
pbkdf2 = { workspace = true }
aes = { workspace = true }
cbc = { workspace = true }
cipher = { workspace = true }
zeroize = { workspace = true }
aes-kw = { workspace = true, features = ["alloc"] }
flate2 = { workspace = true }

[dev-dependencies]
tempfile = "3"
